[metadata]
name = img2table
author = Xavier Canton
summary = img2table is a table identification and extraction Python Library for PDF and images, based on OpenCV image processing
license = MIT
description_file = README.md
description_content_type = text/markdown
home_page = https://github.com/xavctn/img2table
python_requires = >=3.8, <3.12
classifiers=
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src/
packages = img2table


[extras]
gcp =
    google-cloud-vision
aws =
    boto3
azure =
    azure-cognitiveservices-vision-computervision
paddle =
    paddlepaddle==2.4.2:python_version<'3.11'
    paddleocr>=2.0.6:python_version<'3.11'
easyocr =
    easyocr>=1.7.0
    pillow<10


[pbr]
skip_authors = True
skip_changelog = True
skip_reno = True
